--- a/search.html
+++ b/search.html
@@ -36,7 +36,8 @@ https://templatemo.com/tm-587-tiya-golf-club
     </head>
     
     <body>
-        <script async src="https://cse.google.com/cse.js?cx=411525a76b93d4f1c">
-        </script>
-        <div class="gcse-searchresults-only"></div>
+   <script async src="https://cse.google.com/cse.js?cx=411525a76b93d4f1c">
+</script>
+<div class="gcse-searchbox-only"></div>
         </body>
+</html>
