--- a/search.html
+++ b/search.html
@@ -38,6 +38,6 @@ https://templatemo.com/tm-587-tiya-golf-club
     <body>
    <script async src="https://cse.google.com/cse.js?cx=411525a76b93d4f1c">
 </script>
-<div class="gcse-searchbox-only"></div>
+<div class="gcse-search"></div>
         </body>
 </html>
